test/ui/src/compile_fail/std/span_ok_lvl_impl_trait_return.rs
fn main() {

}

#[emit::span(ok_lvl: "info", err_lvl: "warn", "try_work")]
fn try_work() -> Result<(), impl std::error::Error> {
    Ok::<(), std::io::Error>(())
}
